--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Election_Systemforpresident</title>
+      <title>Election President</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <base target="_top">
    </head>
